--- a/Services.html
+++ b/Services.html
@@ -49,26 +49,26 @@
         <div class="nav-page" style="opacity: 0;">
             <div class="nav-menu" style="opacity: 0;">
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="#contactus">Contact Us</a></li>
-                    <li><a href="#home" class="nav-button-link">Contact a counsellor</a></li>
+                    <li><a href="#index" class="nav-button-link">Contact a counsellor</a></li>
                 </ul>
             </div>
         </div>
         <nav class="nav-disable-in-mobile">
             <div class="nav-logo">
-                <a href="#home"><img src="Images/Psyborg-logo.jpg" alt="Psyborg-logo" class="nav-logo-img"></a>
+                <a href="#index"><img src="Images/Psyborg-logo.jpg" alt="Psyborg-logo" class="nav-logo-img"></a>
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="#contactus">Contact Us</a></li>
                 </ul>
             </div>
             <div class="nav-btn">
-                <a href="#home" class="nav-button-link" onclick="reg()">Contact a counsellor</a>
+                <a href="#index" class="nav-button-link" onclick="reg()">Contact a counsellor</a>
             </div>
         </nav>
 
