another bug fixed

--- a/Services.html
+++ b/Services.html
@@ -405,7 +405,7 @@
 
 
 
-    <form class="registration-form">
+    <form class="registration-form" action="/Services.html">
         <div class="formBody">
             <div><img src="./Images/user.png" alt=""><input type="text" placeholder="Name"></div>
 
