--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
 
-    <form class="registration-form">
+    <form class="registration-form" action="/">
         <div class="formBody">
             <div><img src="./Images/user.png" alt=""><input type="text" placeholder="Name"></div>
 
