--- a/Services.html
+++ b/Services.html
@@ -405,7 +405,7 @@
 
 
 
-    <form class="registration-form" action="/Services.html">
+    <form class="registration-form" >
         <div class="formBody">
             <div><img src="./Images/user.png" alt=""><input type="text" placeholder="Name"></div>
 
@@ -434,7 +434,8 @@
             <div id="btn">
 
                 <Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
-                <Button onclick="close()" id="close">Close</Button>
+                <Button onclick="close()"  id="close" ><a href="./Services.html"></a>Close</Button>
+
             </div>
         </div>
 
