--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
                     onchange="document.getElementById('send').disabled = !this.checked">
             </div>
 
-            <div id="btn"><Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
-                <Button onclick="close()" id="close">Close</Button>
+            <div id="btn">
+                <Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
+                <Button onclick="close()"  id="close" ><a href="./index.html"></a>Close</Button>
             </div>
         </div>
 
