--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </div>
 
             <div id="btn">
-                <Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
+                <Button type="submit" onclick="clickBtn()" disabled id="send"><a href="./index.html"></a>Submit</Button>
                 <Button onclick="close()"  id="close" ><a href="./index.html"></a>Close</Button>
             </div>
         </div>
