--- a/Services.html
+++ b/Services.html
@@ -405,7 +405,7 @@
 
 
 
-    <form class="registration-form" >
+    <form class="registration-form" action="./index.html">
         <div class="formBody">
             <div><img src="./Images/user.png" alt=""><input type="text" placeholder="Name"></div>
 
@@ -433,7 +433,7 @@
 
             <div id="btn">
 
-                <Button type="submit" onclick="clickBtn()" disabled id="send"><a href="./Services.html"></a>Submit</Button>
+                <Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
                 <Button onclick="close()"  id="close" ><a href="./Services.html"></a>Close</Button>
 
             </div>
