--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </div>
 
-    <form class="registration-form" action="/">
+    <form class="registration-form" action="./index.html">
         <div class="formBody">
             <div><img src="./Images/user.png" alt=""><input type="text" placeholder="Name"></div>
 
@@ -200,7 +200,7 @@
             </div>
 
             <div id="btn">
-                <Button type="submit" onclick="clickBtn()" disabled id="send"><a href="./index.html"></a>Submit</Button>
+                <Button type="submit" onclick="clickBtn()" disabled id="send">Submit</Button>
                 <Button onclick="close()"  id="close" ><a href="./index.html"></a>Close</Button>
             </div>
         </div>
